# simdlib

./: CMakeLists.txt  README.md
simdlib/: container.h  elemtypes.h  op.h  simd_vector.h  simdlib.h
simdlib/container/: array.h
simdlib/container/array/: aligned_allocator.h  array_fill.h  array_find_first.h  array_find_max.h  array_reduce.h  array_reduce_and.h  arrays_add.h  arrays_bop.h  arrays_madd.h  arrays_top.h
simdlib/op/: load.h
simdlib/op/arch/tachyum/: add.h  eq.h  hadd.h  hand.h  hmax.h  load.h  mask.h  select.h
simdlib/op/arch/tachyum/mx/: madd.h
simdlib/op/arch/x86_64/: add.h  eq.h  hadd.h  hand.h  hmax.h  load.h  madd.h  mask.h
test/: CMakeLists.txt  array_find_first.cpp  array_find_max.cpp  array_reduce_add.cpp  array_reduce_and.cpp  arrays_add.cpp  just_include_header.cpp  test_assert.h
